// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with teacher instructions, prompt and rationale even if not set 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "maxLengthPerChoice": Object {
              "label": "Maximum Length Per Choice",
              "settings": true,
            },
            "partialScoring": Object {
              "label": "Allow Partial Scoring",
              "settings": false,
            },
            "prompt": Object {
              "label": "Prompt",
              "settings": true,
            },
            "rationale": Object {
              "label": "Rationale",
              "settings": true,
            },
            "spellCheck": Object {
              "enabled": true,
              "label": "Spellcheck",
              "settings": true,
            },
            "teacherInstructions": Object {
              "label": "Teacher Instructions",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "promptEnabled": undefined,
              "rationaleEnabled": undefined,
              "spellCheckEnabled": undefined,
              "teacherInstructionsEnabled": undefined,
            },
            "Settings": Object {
              "maxLengthPerChoiceEnabled": undefined,
              "partialScoring": false,
            },
          }
        }
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "prompt": "Complete the sentence",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChangeConfiguration={[Function]}
        onChangeModel={[Function]}
      />
    }
  >
    <div>
      <InputContainer
        label="Teacher Instructions"
      >
        <EditableHtml
          markup=""
          nonEmpty={false}
          onChange={[Function]}
          spellCheck={false}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
      <InputContainer
        label="Prompt"
      >
        <EditableHtml
          disableUnderline={true}
          markup="Complete the sentence"
          nonEmpty={false}
          onChange={[Function]}
          spellCheck={false}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
      <WithStyles(Typography)>
        Define Template, Choices, and Correct Responses
      </WithStyles(Typography)>
      <EditableHtml
        disabled={false}
        highlightShape={false}
        markup="<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>"
        onChange={[Function]}
        responseAreaProps={
          Object {
            "onHandleAreaChange": [Function],
            "options": Object {
              "duplicates": true,
            },
            "respAreaToolbar": [Function],
            "type": "explicit-constructed-response",
          }
        }
        spellCheck={false}
        toolbarOpts={
          Object {
            "position": "top",
          }
        }
      />
      <WithStyles(Typography)>
        Define Alternates and Character Limits
      </WithStyles(Typography)>
      <AlternateResponses
        maxLengthPerChoiceEnabled={true}
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "prompt": "Complete the sentence",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChange={[Function]}
        onLengthChange={[Function]}
        spellCheck={false}
      />
      <InputContainer
        label="Rationale"
      >
        <EditableHtml
          markup=""
          onChange={[Function]}
          spellCheck={false}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
  </ConfigLayout>
</div>
`;

exports[`Main snapshot renders without teacher instructions, prompt and rationale 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "maxLengthPerChoice": Object {
              "label": "Maximum Length Per Choice",
              "settings": true,
            },
            "partialScoring": Object {
              "label": "Allow Partial Scoring",
              "settings": false,
            },
            "prompt": Object {
              "label": "Prompt",
              "settings": true,
            },
            "rationale": Object {
              "label": "Rationale",
              "settings": true,
            },
            "spellCheck": Object {
              "enabled": true,
              "label": "Spellcheck",
              "settings": true,
            },
            "teacherInstructions": Object {
              "label": "Teacher Instructions",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "promptEnabled": undefined,
              "rationaleEnabled": undefined,
              "spellCheckEnabled": undefined,
              "teacherInstructionsEnabled": undefined,
            },
            "Settings": Object {
              "maxLengthPerChoiceEnabled": undefined,
              "partialScoring": false,
            },
          }
        }
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "prompt": "Complete the sentence",
            "promptEnabled": false,
            "rationaleEnabled": false,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": false,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChangeConfiguration={[Function]}
        onChangeModel={[Function]}
      />
    }
  >
    <div>
      <WithStyles(Typography)>
        Define Template, Choices, and Correct Responses
      </WithStyles(Typography)>
      <EditableHtml
        disabled={false}
        highlightShape={false}
        markup="<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>"
        onChange={[Function]}
        responseAreaProps={
          Object {
            "onHandleAreaChange": [Function],
            "options": Object {
              "duplicates": true,
            },
            "respAreaToolbar": [Function],
            "type": "explicit-constructed-response",
          }
        }
        spellCheck={false}
        toolbarOpts={
          Object {
            "position": "top",
          }
        }
      />
      <WithStyles(Typography)>
        Define Alternates and Character Limits
      </WithStyles(Typography)>
      <AlternateResponses
        maxLengthPerChoiceEnabled={true}
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "prompt": "Complete the sentence",
            "promptEnabled": false,
            "rationaleEnabled": false,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": false,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChange={[Function]}
        onLengthChange={[Function]}
        spellCheck={false}
      />
    </div>
  </ConfigLayout>
</div>
`;
